added random button

--- a/style.css
+++ b/style.css
@@ -5,9 +5,21 @@
 }
 .content-container h1{
   text-align: center;
-  padding: 40px;
+  padding-top: 30px;
+  padding-bottom:15px;
   color: #40454f;
-
+}
+.random-wiki{
+  text-align: center;
+}
+.btn{
+  margin: 25px;
+  padding: 10px;
+  font-size: 1.2em;
+  color: #40454f;
+}
+.btn:hover{
+  background: none;
 }
 .wiki-content{
   border: 1px solid #303844;
